# CoconutClaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MISSION.md  Makefile  PLAN-absorb-scripts.md  README.md  SOUL.md  USER.md.example  agent.sh  config.toml.example  pr_page.html  test_escape.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-04-04_131803-format-aware-split.md
config/: allowlist.txt
crates/coconutclaw-cli/: Cargo.toml
crates/coconutclaw-cli/src/: approval.rs  context.rs  context_integration_test.rs  context_tests.rs  main.rs  main_integration_test.rs  markers.rs  markers_tests.rs  scheduler.rs  scheduler_integration_test.rs  service.rs  service_tests.rs  session.rs  session_tests.rs  slack.rs  slack_tests.rs  store.rs  telegram.rs  telegram_tests.rs  turn.rs  turn_tests.rs  types.rs  util.rs  webhook.rs  webhook_tests.rs
crates/coconutclaw-cli/src/cancel/: cancel_impl.rs  mod.rs
crates/coconutclaw-cli/src/commands/: doctor.rs  heartbeat.rs  helpers.rs  mod.rs  nightly_reflection.rs  once.rs  run.rs
crates/coconutclaw-cli/src/delivery/: mod.rs  mod_tests.rs  slack.rs  telegram.rs
crates/coconutclaw-cli/src/loops/: mod.rs  poll.rs  slack_socket.rs  webhook.rs
crates/coconutclaw-cli/src/recovery/: mod.rs  pending.rs
crates/coconutclaw-cli/src/scheduling/: mod.rs
crates/coconutclaw-cli/src/store/: approvals.rs  kv.rs  migrations.rs  mod.rs  scheduled_tasks.rs  task_runs.rs  tests.rs  turns.rs
crates/coconutclaw-cli/tests/: e2e_scheduler.rs  e2e_scheduler_retry.rs  e2e_smoke.rs
crates/coconutclaw-cli/tests/support/: mod.rs
crates/coconutclaw-config/: Cargo.toml
crates/coconutclaw-config/src/: lib.rs  lib_tests.rs
crates/coconutclaw-provider/: Cargo.toml
crates/coconutclaw-provider/src/: lib.rs  lib_tests.rs
cron/: coconutclaw.crontab.example
docs/: architecture-review.md  phase0-baseline-checklist.md  pi-agent-rust-integration-plan.md  rust-phase1-stability-execution-plan-2026-02-26.md  rust-single-binary-migration-plan.md  v0.4.0-live-test-plan.md
docs/adr/: 001-streaming-and-structured-approval.md
docs/superpowers/plans/: 2026-04-20-v0.3.0-release.md
docs/superpowers/specs/: 2026-04-20-v0.3.0-release-design.md
scripts/: _resolve_bin.sh  asr.sh  compare_bash_rust_markers.sh  heartbeat.ps1  heartbeat.sh  init-instance.sh  install.ps1  install.sh  nightly_reflection.ps1  nightly_reflection.sh  run.ps1  run.sh  service.ps1  service.sh  setup.sh  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh  tts.sh  uninstall.ps1  uninstall.sh
services/: dashboard.py
sql/: schema.sql
systemd/: coconutclaw-heartbeat.service  coconutclaw-heartbeat.timer  coconutclaw-nightly-reflection.service  coconutclaw-nightly-reflection.timer  coconutclaw-tunnel.service  coconutclaw-webhook.service  coconutclaw.service
