[workspace]
members = [
  "crates/coconutclaw-config",
  "crates/coconutclaw-provider",
  "crates/coconutclaw-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Leo <leo@example.com>"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
dotenvy = "0.15"
fs2 = "0.4"
rusqlite = { version = "0.33", features = ["bundled"] }
serde_json = "1"
shlex = "1"
thiserror = "2"
dirs = "6"
