[package]
name = "coconutclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "coconutclaw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
ctrlc.workspace = true
fs2.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
coconutclaw-config = { path = "../coconutclaw-config" }
coconutclaw-provider = { path = "../coconutclaw-provider" }
