[package]
name = "coconutclaw-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
shlex.workspace = true
coconutclaw-config = { path = "../coconutclaw-config" }
libc.workspace = true
tracing.workspace = true
